# sengine

./: .gitignore
.git.bfg-report/2019-10-23/12-35-13/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
Cengine/Cengine/: Camera.cs  Cengine.csproj  Cengine.sln  Program.cs  Shader.cs  Texture.cs
Cengine/Cengine/OpenGL/: BufferObject.cs  Transform.cs  VertexArrayObject.cs
CoreEngine/: App.cs  Camera.cs  CoreEngine.csproj  CoreEngine.sln  Managers.cs  NoesisTest.cs  Program.cs
CoreEngine/Components/: CameraController.cs  Component.cs  FPSCamera.cs  NoClipCamera.cs
CoreEngine/Data/Json/: block.json  textures.json
CoreEngine/GameObjects/: Block.cs  Dir.cs  Face.cs
CoreEngine/Manager/: BlockManager.cs  Chunk.cs  ManagerBase.cs  Physics.cs  Shader.cs  TerrainManager.cs
CoreEngine/Models/: BlockInfoModel.cs  TextureInfoModel.cs  Vector3I.cs
CoreEngine/NoesisAddons/: CustomXamlProvider.cs
CoreEngine/OpenGLModels/: BlockTexture.cs  ModelBuffer.cs  Texture.cs
CoreEngine/Resources/XAML/: NumericUpDown.xaml  test.xaml
CoreEngine/Shaders/: shader.frag  shader.vert
CoreEngine/XamlController/: ControllerBase.cs  MyGrid.cs  NumericUpDown.cs
CoreEngine/staticMethods/: PointMath.cs
GLEngine/: AssetController.cpp  AssetController.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionManager.cpp  CollisionManager.h  Cube.cpp  Cube.h  Managers.h  Matrix.h  ModelLoader.cpp  Plane.cpp  Plane.h  Point.cpp  Point.h  Renderer.cpp  Renderer.h  SimpleVertexShader.glsl  TextureLoader.cpp  Transform.cpp  Transform.h  Triangle.h  VboIndex.cpp  VboIndex.h  Vector3D.cpp  Vector3D.h  main.cpp  shader.cpp  shader.hpp
GLEngine/Components/: Collider.cpp  Collider.h  Component.cpp  Component.h  NoclipController.cpp  NoclipController.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h
GLEngine/Data/: 8k.bmp.REMOVED.git-id  cuve.mtl  untitled.mtl
GLEngine/Data/Json/: block.json  textures.json
GLEngine/Data/Textures/: textureMap.xcf  textureMap2.xcf
GLEngine/Gameobject/: Cube.cpp  Cube.h  Excavator.cpp  Excavator.h  Gameobject.cpp  Gameobject.h  Point.cpp  Point.h  Triangle.cpp  Triangle.h
GLEngine/Managers/: BlockManager.cpp  BlockManager.h  ChunkManager.cpp  ChunkManager.h  InputManager.cpp  InputManager.h  ModelLoader.cpp  ModelLoader.h  ObjectManager.cpp  ObjectManager.h  PerlinNoise.cpp  PerlinNoise.h  TerrainGenerator.cpp  TerrainGenerator.h  TextureLoader.cpp  TextureLoader.h  shader.cpp  shader.hpp
GLEngine/Object/: Block.cpp  Block.h  Object.cpp  Object.h
GLEngine/Shader/: ColorFragmentShader.glsl  ColorVertexShader.glsl  ShaderGenerator.cpp  SimpleFragmentShader.glsl
GLEngine/StaticMethods/: PointMath.cpp  PointMath.h
GLEngine/Structs/: Block.h  BlockInfo.h  Face.h  TextureInfo.h
GamePro/: App.cpp  App.h  AssetController.cpp  AssetController.h  CMakeLists.txt  CollisionController.cpp  CollisionController.h  Gameobject.cpp  Gameobject.h  GraphicsController.cpp  GraphicsController.h  Manager.h  ObjectController.cpp  ObjectController.h  ObjectFactory.cpp  ObjectLoader.cpp  ObjectStreamer.cpp  ObjectStreamer.h  SceneVariables.h  WindowController.cpp  WindowController.h  main.cpp
GamePro/Components/: AnimationController.cpp  AnimationController.h  AudioCom.cpp  AudioCom.h  Collider.cpp  Collider.h  Component.cpp  Component.h  InputController.cpp  InputController.h  Movement.cpp  Movement.h  Physics.cpp  Physics.h  PlayerController.cpp  PlayerController.h  RenderCom.cpp  RenderCom.h  Transform.cpp  Transform.h
GamePro/Controllers/: AssetController.cpp  AssetController.h  CollisionController.cpp  CollisionController.h  GraphicsController.h  ObjectController.cpp  ObjectController.h  ObjectFactory.cpp  ObjectFactory.h  ObjectLoader.cpp  ObjectLoader.h  WindowController.cpp  WindowController.h
GamePro/Data/: file.json  input.json
GamePro/DataTypes/: Animation.cpp  Animation.h  TextureRect.cpp  TextureRect.h
GamePro/Gameobjects/: Gameobject.cpp  Gameobject.h
UntitledProject/: CMakeLists.txt  main.cpp
sengine/: CMakeLists.txt  main.cpp  test.pb.cc  test.pb.h  test.proto
untitled/: keygen  main.c
